--- a/1_medium/index.html
+++ b/1_medium/index.html
@@ -41,12 +41,12 @@
             <div class="top-right"> <!-- div for write notification and profile button-->
                 <!-- Write button -->
                 <a href="#" class="write-button">
-                    <img src="write.jpg" alt="write" width="27" height="27">
+                    <img src="image/" alt="write" width="27" height="27">
                     <div>Write</div>
                 </a>
                 <!-- Notification Bell -->
                 <a href="#" class="notification-button">
-                    <img src="notification-bell.png" alt="notification-bell" width="27" height="27">
+                    <img src="image/notification-bell.png" alt="notification-bell" width="27" height="27">
                     
                 </a>
 
@@ -63,7 +63,7 @@
                 <div class="left-block-top">
                     <div class="for-you-section">
                         <a href="#" class="plus-section">
-                            <img src="plus.jpg" alt="add-item" width="27" height="27">
+                            <img src="image/plus.jpg" alt="add-item" width="27" height="27">
                         </a>
                         
                         <a href="#" class="tab for-you">For you</a>
